--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Leading Page Doutor Estranho</title>
     <link rel="icon" href="favico.png" />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,15 +15,19 @@
     />
   </head>
   <body>
-    <div class="d-flex justify-content-between">
-      <div>Clea</div>
-      <div>
-        <div>Circulo Girando</div>
-        <div>Imagem Doutor Estranho</div>
-        <div>Titulo do Filme</div>
+    <section>
+      <div
+        class="div-secao-principal d-flex justify-content-between align-items-end"
+      >
+        <div>Clea</div>
+        <div>
+          <div>Circulo Girando</div>
+          <div>Imagem Doutor Estranho</div>
+          <div>Titulo do Filme</div>
+        </div>
+        <div>Wanda</div>
       </div>
-      <div>Wanda</div>
-    </div>
+    </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
