--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
       <div
         class="div-secao-principal d-flex justify-content-between align-items-end"
       >
-        <div>Clea</div>
+        <div>
+          <img
+            class="img-clea"
+            src="assets/img/secao-principal/clea.png"
+            alt="Clea Doutor Estranho"
+          />
+        </div>
         <div>
           <div>Circulo Girando</div>
           <div>Imagem Doutor Estranho</div>
