--- a/index.html
+++ b/index.html
@@ -31,7 +31,13 @@
           <div>Imagem Doutor Estranho</div>
           <div>Titulo do Filme</div>
         </div>
-        <div>Wanda</div>
+        <div>
+          <img
+            class="img-wanda"
+            src="assets/img/secao-principal/wanda.png"
+            alt="Wanda Doutor Estranho"
+          />
+        </div>
       </div>
     </section>
     <script
