--- a/index.html
+++ b/index.html
@@ -26,10 +26,16 @@
             alt="Clea Doutor Estranho"
           />
         </div>
-        <div>
-          <div>Circulo Girando</div>
-          <div>Imagem Doutor Estranho</div>
-          <div>Titulo do Filme</div>
+        <div class="div-meio d-flex justify-content-center position-absolute">
+          <div>
+            <img
+              class="img-circulo"
+              src="assets/img/secao-principal/circulo.png"
+              alt="Circulo Doutor Estranho"
+            />
+          </div>
+          <div class="position-absolute">Imagem Doutor Estranho</div>
+          <div class="position-absolute">Titulo do Filme</div>
         </div>
         <div>
           <img
