adicionando imagens do doutor estranho e do titulo do filme
posicionando itens absolutos embaixo (divs das imagens) e dando um padding no titulo

--- a/index.html
+++ b/index.html
@@ -27,15 +27,27 @@
           />
         </div>
         <div class="div-meio d-flex justify-content-center position-absolute">
-          <div>
+          <div class="div-img-circulo position-absolute">
             <img
               class="img-circulo"
               src="assets/img/secao-principal/circulo.png"
               alt="Circulo Doutor Estranho"
             />
           </div>
-          <div class="position-absolute">Imagem Doutor Estranho</div>
-          <div class="position-absolute">Titulo do Filme</div>
+          <div class="div-img-drestranho position-absolute">
+            <img
+              class="img-doutorestranho"
+              src="assets/img/secao-principal/drestranho.png"
+              alt="Doutor Estranho"
+            />
+          </div>
+          <div class="div-img-titulo position-absolute">
+            <img
+              class="img-titulo"
+              src="assets/img/secao-principal/titulo.png"
+              alt="Titulo do Filme"
+            />
+          </div>
         </div>
         <div>
           <img
