--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Leading Page Doutor Estranho</title>
     <link rel="icon" href="favico.png" />
     <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/animacoes-personalizadas.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -21,7 +22,7 @@
       >
         <div>
           <img
-            class="img-clea"
+            class="img-clea aparece-e-foca-6s"
             src="assets/img/secao-principal/clea.png"
             alt="Clea Doutor Estranho"
           />
@@ -29,14 +30,14 @@
         <div class="div-meio d-flex justify-content-center position-absolute">
           <div class="div-img-circulo position-absolute">
             <img
-              class="img-circulo"
+              class="img-circulo rotacao"
               src="assets/img/secao-principal/circulo.png"
               alt="Circulo Doutor Estranho"
             />
           </div>
           <div class="div-img-drestranho position-absolute">
             <img
-              class="img-doutorestranho"
+              class="img-doutorestranho aumenta-e-sobe"
               src="assets/img/secao-principal/drestranho.png"
               alt="Doutor Estranho"
             />
@@ -51,7 +52,7 @@
         </div>
         <div>
           <img
-            class="img-wanda"
+            class="img-wanda aparece-e-foca-4s"
             src="assets/img/secao-principal/wanda.png"
             alt="Wanda Doutor Estranho"
           />
