--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="favico.png" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/animacoes-personalizadas.css" />
+    <link rel="stylesheet" href="assets/css/conteudo.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,13 +17,61 @@
     />
   </head>
   <body>
+    <style>
+      body {
+        background-color: black;
+        color: white;
+      }
+    </style>
     <section>
+      <section class="section-conteudo">
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-12 col-md-6 mb-5">
+              <div class="d-flex justify-content-center">
+                <div class="d-flex flex-column div-info">
+                  <div class="p-2 div-titulo-principal">
+                    <h1 class="titulo-principal">
+                      Deixe seu Email e Receba o Ingresso Exclusivo!
+                    </h1>
+                  </div>
+                  <div class="p-2">
+                    <div class="input-group mb-3">
+                      <input
+                        type="email"
+                        class="form-control input-cta"
+                        placeholder="seu@email.com"
+                        aria-label="Recipient's username"
+                        aria-describedby="basic-addon2"
+                      />
+                      <div class="input-group-append">
+                        <button class="btn btn-cta" type="button">
+                          Enviar
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-md-6 mb-5">
+              <div class="d-flex justify-content-center">
+                <img
+                  class="img-fluid"
+                  src="assets/img/ticket.png"
+                  alt="imagem ticket cinema"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <div
         class="div-secao-principal d-flex justify-content-between align-items-end"
       >
         <div>
           <img
-            class="img-clea aparece-e-foca-6s"
+            class="img-clea d-none d-md-block aparece-e-foca-6s"
             src="assets/img/secao-principal/clea.png"
             alt="Clea Doutor Estranho"
           />
@@ -52,7 +101,7 @@
         </div>
         <div>
           <img
-            class="img-wanda aparece-e-foca-4s"
+            class="img-wanda d-none d-md-block aparece-e-foca-4s"
             src="assets/img/secao-principal/wanda.png"
             alt="Wanda Doutor Estranho"
           />
